--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,13 @@ endif()
 
 # Options
 option(protobuf_INSTALL "Install protobuf binaries and files" ON)
-option(protobuf_BUILD_TESTS "Build tests" ON)
+option(protobuf_BUILD_TESTS "Build tests" OFF)
 option(protobuf_BUILD_CONFORMANCE "Build conformance tests" OFF)
 option(protobuf_BUILD_EXAMPLES "Build examples" OFF)
 option(protobuf_BUILD_PROTOBUF_BINARIES "Build protobuf libraries and protoc compiler" ON)
 option(protobuf_BUILD_PROTOC_BINARIES "Build libprotoc and protoc compiler" ON)
 option(protobuf_BUILD_LIBPROTOC "Build libprotoc" OFF)
+option(protobuf_BUILD_LIBCONFORMANCE "Build libconformance" ON)
 option(protobuf_DISABLE_RTTI "Remove runtime type information in the binaries" OFF)
 option(protobuf_TEST_XML_OUTDIR "Output directory for XML logs from tests." "")
 option(protobuf_ALLOW_CCACHE "Adjust build flags to allow for ccache support." OFF)
@@ -315,6 +316,12 @@ if (protobuf_BUILD_PROTOBUF_BINARIES)
       set(protobuf_PROTOC_EXE protoc)
     endif ()
   endif ()
+  if (protobuf_BUILD_LIBCONFORMANCE)
+    include(${protobuf_SOURCE_DIR}/cmake/libconformance.cmake)
+    if (NOT DEFINED protobuf_LIB_CONFORMANCE)
+      set(protobuf_LIB_CONFORMANCE libconformance)
+    endif ()
+  endif ()
 else ()
   find_package(Protobuf NO_MODULE)
   if (Protobuf_FOUND)
@@ -327,7 +334,7 @@ else ()
 endif ()
 
 # Ensure we have a protoc executable and protobuf libraries if we need one
-if (protobuf_BUILD_TESTS OR protobuf_BUILD_CONFORMANCE OR protobuf_BUILD_EXAMPLES)
+if (protobuf_BUILD_TESTS OR protobuf_BUILD_CONFORMANCE OR protobuf_BUILD_EXAMPLES OR protobuf_BUILD_LIBCONFORMANCE)
   if (NOT DEFINED protobuf_PROTOC_EXE)
     find_program(protobuf_PROTOC_EXE protoc REQUIRED)
     message(STATUS "Found system ${protobuf_PROTOC_EXE}.")
